[tool.poetry]
name = "python-example"
version = "0.1.0"
description = ""
authors = ["Pangratios Cosma <pagcosma@gmail.com>"]
readme = "README.md"
packages = [{include = "python_example"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
honeybadger = "0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
